<resources>
    <string name="app_name">tinru</string>

    <!-- Shared Preference related string values -->
    <string name="preference_file_key">com.debdroid.tinru.PREFERENCE_FILE_KEY</string>
    <string name="preference_origin_airport_code_key">com.debdroid.tinru.PREFERENCE_ORIGIN_AIRPORT_CODE_KEY</string>
    <string name="preference_destination_airport_code_key">com.debdroid.tinru.PREFERENCE_DESTINATION_AIRPORT_CODE_KEY</string>
    <string name="preference_origin_airport_city_key">com.debdroid.tinru.PREFERENCE_ORIGIN_AIRPORT_CITY_KEY</string>
    <string name="preference_destination_airport_city_key">com.debdroid.tinru.PREFERENCE_DESTINATION_AIRPORT_CITY_KEY</string>


    <!-- Toast or Error messages -->
    <string name="no_network_error_msg">No internet connection available</string>
    <string name="empty_message">Looks like there is no data.. try again later</string>

    <!-- Miscellaneous -->
    <string name="database_name">TinruDatabase.db</string>
    <string name="okhttp_cache_name">okhttp_cache</string>
    <string name="home_progressbar_text_msg">Loading.. This may take a while</string>
    <string name="point_of_interest_query_parameter_part">point of interest</string>
    <string name="point_of_interest_flight_button_text_suffix">Flight to</string>
    <string name="default_location_london">London</string>
    <string name="default_destination_location_delhi">Delhi</string>
    <string name="default_origin_airport_code_london">LHR</string>
    <string name="default_destination_airport_code_delhi">DEL</string>
    <string name="default_place_id_london">ChIJdd4hrwug2EcRmSrV3Vo6llI</string>
    <string name="default_address_london">London, UK</string>
    <string name="default_photo_reference_london">CmRbAAAAaKRxb5Wh3d0IT66PwSJNFIGg4VZY8CtQiqOA27yUBpGJEhm29tT4TQA-g_LUyfhWWvVIwfWroj0eRug8M8_GAQNKqWjXp_TipLUx8RVDHgFYqDU8LlNIOfH7U2VUim_2EhC4Xxal6jHE9HPJAXVAe4Y9GhRnUb9UlgIySXNL12G-Z4Sx-F-6zg</string>
    <string name="default_latlng_london">51.509865,-0.11809</string>
    <string name="google_places_api_path_segment_photo">photo</string>
    <string name="google_places_api_photo_query_parm_maxwidth_key">maxwidth</string>
    <!--<string name="google_places_api_photo_query_parm_maxwidth_value">600</string>-->
    <string name="google_places_api_query_apikey">key</string>
    <string name="google_places_api_photo_query_parm_photoreference_key">photoreference</string>
    <string name="appwidget_no_data_available_msg">No data available</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="point_of_interest_image_transition">poster_image_transition</string>
    <string name="point_of_interest_list_image_content_desc">Image of point of interest</string>

    <!-- add here for new type -->

    <string name="home_activity_layout_search_button_text">Where do you want to travel?</string>
    <string name="home_activity_layout_image_content_desc">Background image</string>
    <string name="home_activity_layout_nearby_restaurant">Restaurant</string>
    <string name="home_activity_layout_nearby_cafe">Cafe</string>
    <string name="home_activity_layout_nearby_bar">Bar</string>
    <string name="home_activity_layout_nearby_atm">ATM</string>
    <string name="home_activity_layout_nearby_shopping">Shopping</string>
    <string name="home_activity_layout_nearby_petrol_pump">Gas Station</string>


    <string name="google_places_api_nearby_type_restaurant">restaurant</string>
    <string name="google_places_api_nearby_type_cafe">cafe</string>
    <string name="google_places_api_nearby_type_bar">bar</string>
    <string name="google_places_api_nearby_type_atm">atm</string>
    <string name="google_places_api_nearby_type_shopping">home_goods_store</string>
    <string name="google_places_api_nearby_type_petrol_pump">gas_station</string>
    <string name="single_nearby_item_image_content_description">Nearby place image</string>
    <string name="single_nearby_item_open_close_heading">Open - Close: </string>

    <string name="single_flight_departure_title">Departure:</string>
    <string name="single_flight_arrival_title">Arrival:</string>
    <string name="single_flight_duration_title">Duration:</string>
    <string name="single_flight_fare_title">Fare:</string>
    <string name="flight_list_activity_title_prefix">Flights to</string>
    <string name="flight_list_orig_to_dest_msg">%1$s to %2$s</string>
    <string name="google_powered_by_image_content_desc">Powered by Google image</string>
    <string name="flight_origin_code_image_content_desc">Flight origin airport code</string>
    <string name="flight_dest_code_image_content_desc">Flight destination airport code</string>
    <string name="flight_origin_and_dest_code_connect_image_content_desc">Line connects origin and destination airport codes image</string>
    <string name="flight_logo_image_content_Desc">Flight logo</string>
</resources>
