<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity">

    <ProgressBar
        android:id="@+id/pb_home_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/tv_progressbar_text_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/progressbar_text_msg_top_margin"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginBottom="@dimen/material_design_phone_grid_layout_margin"
        android:text="@string/home_progressbar_text_msg"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/home_activity_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/iv_current_place_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/home_activity_layout_image_content_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/tinru_home_activity_fallback_image" />

            <TextView
                android:id="@+id/tv_current_place_city_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_color_opacity_10"
                android:paddingBottom="@dimen/material_design_phone_grid_layout_margin"
                android:paddingLeft="@dimen/material_design_phone_grid_layout_margin"
                android:paddingTop="@dimen/material_design_phone_grid_layout_margin"
                android:text="Kolkata, India"
                android:fontFamily="sans-serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/color_white"
                tools:text="London, UK"/>

            <Button
                android:id="@+id/bt_location_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/home_search_button_bottom_padding"
                android:alpha=".8"
                android:drawableLeft="@drawable/tinru_search_icon"
                android:elevation="@dimen/button_elevation"
                android:drawablePadding="@dimen/home_search_button_drawable_padding"
                android:text="@string/home_activity_layout_search_button_text"
                android:textAllCaps="false" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/material_design_phone_grid_layout_margin"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_nearby_restaurant"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/home_nearby_bottom_padding"
                    android:layout_weight="1"
                    android:background="@color/color_white"
                    android:drawableLeft="@drawable/tinru_restaurant_icon"
                    android:elevation="@dimen/button_elevation"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/home_activity_layout_nearby_restaurant"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/bt_nearby_cafe"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/home_nearby_bottom_padding"
                    android:layout_weight="1"
                    android:background="@color/color_white"
                    android:drawableLeft="@drawable/tinru_cafe_icon"
                    android:elevation="@dimen/button_elevation"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/home_activity_layout_nearby_cafe"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_nearby_bar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/home_nearby_bottom_padding"
                    android:layout_weight="1"
                    android:background="@color/color_white"
                    android:drawableLeft="@drawable/tinru_bar_icon"
                    android:elevation="@dimen/button_elevation"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/home_activity_layout_nearby_bar"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/bt_nearby_atm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/home_nearby_bottom_padding"
                    android:layout_weight="1"
                    android:background="@color/color_white"
                    android:drawableLeft="@drawable/tinru_atm_icon"
                    android:elevation="@dimen/button_elevation"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/home_activity_layout_nearby_atm"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_nearby_shopping"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/home_nearby_bottom_padding"
                    android:layout_weight="1"
                    android:background="@color/color_white"
                    android:drawableLeft="@drawable/tinru_shopping_icon"
                    android:elevation="@dimen/button_elevation"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/home_activity_layout_nearby_shopping"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/bt_nearby_petrol_pump"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/home_nearby_bottom_padding"
                    android:layout_weight="1"
                    android:background="@color/color_white"
                    android:drawableLeft="@drawable/tinru_petrol_pump_icon"
                    android:elevation="@dimen/button_elevation"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/home_activity_layout_nearby_petrol_pump"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/iv_home_powered_by_google"
            android:layout_marginBottom="@dimen/powered_by_google_logo_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/powered_by_google_light" />
    </LinearLayout>

    <!--<ImageView-->
        <!--android:id="@+id/iv_poi_detail_powered_by_google"-->
        <!--android:layout_margin="@dimen/material_design_phone_grid_layout_margin"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center|bottom"-->
        <!--android:src="@drawable/powered_by_google_light" />-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/tinru_fab_search"
        android:layout_margin="@dimen/fab_margin" />
</FrameLayout>