<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.PointOfInterestDetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.PointOfInterestDetailActivity">

        <ProgressBar
            android:id="@+id/pb_poi_detail_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_poi_detail_pb_text_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/progressbar_text_msg_top_margin"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/material_design_phone_grid_layout_margin"
            android:fontFamily="sans-serif"
            android:text="@string/home_progressbar_text_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="invisible" />

        <RelativeLayout
            android:id="@+id/poi_detail_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_poi_detail_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/poi_detail_image_width"
                android:contentDescription="@string/home_activity_layout_image_content_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/tinru_home_activity_fallback_image" />

            <TextView
                android:id="@+id/tv_poi_detail_place_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
                android:layout_marginRight="@dimen/material_design_phone_grid_layout_margin"
                android:layout_below="@+id/iv_poi_detail_image"
                android:fontFamily="sans-serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="The Place Name" />

            <TextView
                android:id="@+id/tv_poi_detail_place_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
                android:layout_marginRight="@dimen/material_design_phone_grid_layout_margin"
                android:layout_below="@+id/tv_poi_detail_place_name"
                android:fontFamily="sans-serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:text="The Place Address" />

            <TextView
                android:id="@+id/tv_poi_detail_place_rating_Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
                android:layout_below="@+id/tv_poi_detail_place_address"
                android:fontFamily="sans-serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorAccent"
                tools:text="4.9" />

            <RatingBar
                android:id="@+id/rb_poi_detail_rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
                android:layout_marginRight="@dimen/material_design_phone_grid_layout_margin"
                android:layout_below="@+id/tv_poi_detail_place_address"
                android:layout_marginStart="@dimen/poi_list_left_rating_bar_padding"
                android:layout_toRightOf="@+id/tv_poi_detail_place_rating_Value" />

            <TextView
                android:id="@+id/rb_poi_detail_user_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
                android:layout_marginRight="@dimen/material_design_phone_grid_layout_margin"
                android:layout_below="@+id/tv_poi_detail_place_rating_Value"
                android:fontFamily="sans-serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:text="This space is for adding user review which will be done later, still thinking whether to go with recyclerview or not" />

            <LinearLayout
                android:id="@+id/poi_detail_nearby_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/material_design_phone_grid_layout_margin"
                android:layout_below="@+id/rb_poi_detail_user_review"
                android:gravity="bottom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bt_nearby_restaurant"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/home_nearby_bottom_padding"
                        android:layout_weight="1"
                        android:background="@color/color_white"
                        android:drawableLeft="@drawable/tinru_restaurant_icon"
                        android:elevation="@dimen/button_elevation"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:text="@string/home_activity_layout_nearby_restaurant"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/bt_nearby_cafe"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/home_nearby_bottom_padding"
                        android:layout_weight="1"
                        android:background="@color/color_white"
                        android:drawableLeft="@drawable/tinru_cafe_icon"
                        android:elevation="@dimen/button_elevation"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:text="@string/home_activity_layout_nearby_cafe"
                        android:textAllCaps="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bt_nearby_bar"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/home_nearby_bottom_padding"
                        android:layout_weight="1"
                        android:background="@color/color_white"
                        android:drawableLeft="@drawable/tinru_bar_icon"
                        android:elevation="@dimen/button_elevation"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:text="@string/home_activity_layout_nearby_bar"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/bt_nearby_atm"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/home_nearby_bottom_padding"
                        android:layout_weight="1"
                        android:background="@color/color_white"
                        android:drawableLeft="@drawable/tinru_atm_icon"
                        android:elevation="@dimen/button_elevation"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:text="@string/home_activity_layout_nearby_atm"
                        android:textAllCaps="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bt_nearby_shopping"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/home_nearby_bottom_padding"
                        android:layout_weight="1"
                        android:background="@color/color_white"
                        android:drawableLeft="@drawable/tinru_shopping_icon"
                        android:elevation="@dimen/button_elevation"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:text="@string/home_activity_layout_nearby_shopping"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/bt_nearby_petrol_pump"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/home_nearby_bottom_padding"
                        android:layout_weight="1"
                        android:background="@color/color_white"
                        android:drawableLeft="@drawable/tinru_petrol_pump_icon"
                        android:elevation="@dimen/button_elevation"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:text="@string/home_activity_layout_nearby_petrol_pump"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
        <ImageView
            android:id="@+id/iv_poi_detail_powered_by_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:src="@drawable/powered_by_google_light" />
    </FrameLayout>
</ScrollView>